--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,11 @@
       
 </head>
 <body>
+      <form class="form" action="#">
+            <input type="text" name="name" placeholder="Your name">
+            <input type="text" name="tel" placeholder="Your tel">
+            <button>SUbmit</button>
+      </form>
       <header>
             <nav class="nav">
                   <h2 class="logo-tag">Prorez</h2>
@@ -73,7 +78,8 @@
             </div>
             </section>
 
-      
       </main>
+      <script defer src="js/every.js"></script>
+
 </body>
 </html>
