--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
       
 </head>
 <body>
-      <form class="form" action="#">
-            <input type="text" name="name" placeholder="Your name">
-            <input type="text" name="tel" placeholder="Your tel">
-            <button>SUbmit</button>
-      </form>
+      <div class="modal">
+            <div class="modal-content">
+               
+                  <form class="form" action="#">
+                        <input type="text" name="name" placeholder="Your name"><br>
+                        <input type="text" name="tel" placeholder="Your tel"><br>
+                        <button class="btn-close">Submit</button>
+                  </form>
+                  <div class="success-content">
+                        <p class="success-tag">You registered Succesfully</p>
+                        </div>
+                  <div class="fail-content">
+                        <p>Failde to register</p>
+                  </div>
+            </div>
+      </div>
       <header>
             <nav class="nav">
                   <h2 class="logo-tag">Prorez</h2>
@@ -50,7 +61,7 @@
                   </div>
             </section>
             <button class="btn-1">Download RESUME</button>
-            <button class="btn">View portfolio</button>
+            <button class="btn-modal">View Modal</button>
             <section class="about-section">
                   <div class="about-block">
                         <h2 class="about-tag">About</h2>
